manuscripts/elife-13964/v2/manuscript.md
# ERG signaling in prostate cancer is driven through PRMT5-dependent methylation of the androgen receptor

## Authors

- Zineb Mounir
- Joshua M Korn
- Thomas Westerling
- Fallon Lin
- Christina A Kirby
- Markus Schirle
- Gregg McAllister
- Greg Hoffman
- Nadire Ramadan
- Anke Hartung
- Yan Feng
- David Randal Kipp
- Christopher Quinn
- Michelle Fodor
- Jason Baird
- Marie Schoumacher
- Ronald Meyer
- James Deeds
- Gilles Buchwalter
- Travis Stams
- Nicholas Keen
- William R Sellers
- Myles Brown
- Raymond A Pagliarini †

### Affiliations

1. Department of Oncology Novartis Institutes for BioMedical Research Cambridge United States raymond.pagliarini@novartis.com

† Corresponding author

## Abstract

The TMPRSS2:ERG gene fusion is common in androgen receptor (AR) positive prostate cancers, yet its function remains poorly understood. From a screen for functionally relevant ERG interactors, we identify the arginine methyltransferase PRMT5. ERG recruits PRMT5 to AR-target genes, where PRMT5 methylates AR on arginine 761. This attenuates AR recruitment and transcription of genes expressed in differentiated prostate epithelium. The AR-inhibitory function of PRMT5 is restricted to TMPRSS2:ERG -positive prostate cancer cells. Mutation of this methylation site on AR results in a transcriptionally hyperactive AR, suggesting that the proliferative effects of ERG and PRMT5 are mediated through attenuating AR's ability to induce genes normally involved in lineage differentiation. This provides a rationale for targeting PRMT5 in TMPRSS2:ERG positive prostate cancers. Moreover, methylation of AR at arginine 761 highlights a mechanism for how the ERG oncogene may coax AR towards inducing proliferation versus differentiation.
